src/bindings/c/CPLC.h

extern "C" int CPLC_icmax_cnst();
extern "C" int CPLC_jcmax_cnst();
extern "C" int CPLC_kcmax_cnst();
extern "C" int CPLC_icmin_bnry();
extern "C" int CPLC_jcmin_bnry();
extern "C" int CPLC_kcmin_bnry();
extern "C" int CPLC_icmax_bnry();
extern "C" int CPLC_jcmax_bnry();
extern "C" int CPLC_kcmax_bnry();
extern "C" int CPLC_timestep_ratio();
extern "C" int CPLC_comm_style();
extern "C" int CPLC_comm_style_send_recv();
extern "C" int CPLC_comm_style_gath_scat();
extern "C" int CPLC_cpl_cfd_bc_x();
extern "C" int CPLC_cpl_cfd_bc_y();
extern "C" int CPLC_cpl_cfd_bc_z();
extern "C" int CPLC_cpl_md_bc_slice();
extern "C" int CPLC_cpl_cfd_bc_slice();
extern "C" double CPLC_density_cfd();
extern "C" double CPLC_dx();
extern "C" double CPLC_dy();
extern "C" double CPLC_dz();
extern "C" double CPLC_xl_md();
extern "C" double CPLC_yl_md();
extern "C" double CPLC_zl_md();
extern "C" double CPLC_x_orig_cfd();
extern "C" double CPLC_y_orig_cfd();
extern "C" double CPLC_z_orig_cfd();
extern "C" double CPLC_x_orig_md();
extern "C" double CPLC_y_orig_md();
extern "C" double CPLC_z_orig_md();
extern "C" double CPLC_xl_cfd();
extern "C" double CPLC_yl_cfd();
extern "C" double CPLC_zl_cfd();
extern "C" double* CPLC_xg();
extern "C" double* CPLC_yg();
extern "C" double* CPLC_zg();