src/bindings/c/CPLC.f90


    integer(C_INT) function CPLC_icmax_cnst() &
        bind(C, name="CPLC_icmax_cnst")
        use CPL, only: icmax_cnst
        implicit none

        CPLC_icmax_cnst = icmax_cnst - 1
        
    end function CPLC_icmax_cnst

    integer(C_INT) function CPLC_jcmax_cnst() &
        bind(C, name="CPLC_jcmax_cnst")
        use CPL, only: jcmax_cnst
        implicit none

        CPLC_jcmax_cnst = jcmax_cnst - 1
        
    end function CPLC_jcmax_cnst

    integer(C_INT) function CPLC_kcmax_cnst() &
        bind(C, name="CPLC_kcmax_cnst")
        use CPL, only: kcmax_cnst
        implicit none

        CPLC_kcmax_cnst = kcmax_cnst - 1
        
    end function CPLC_kcmax_cnst


    integer(C_INT) function CPLC_icmin_bnry() &
        bind(C, name="CPLC_icmin_bnry")
        use CPL, only: icmin_bnry
        implicit none

        CPLC_icmin_bnry = icmin_bnry - 1
        
    end function CPLC_icmin_bnry

    integer(C_INT) function CPLC_jcmin_bnry() &
        bind(C, name="CPLC_jcmin_bnry")
        use CPL, only: jcmin_bnry
        implicit none

        CPLC_jcmin_bnry = jcmin_bnry - 1
        
    end function CPLC_jcmin_bnry

    integer(C_INT) function CPLC_kcmin_bnry() &
        bind(C, name="CPLC_kcmin_bnry")
        use CPL, only: kcmin_bnry
        implicit none

        CPLC_kcmin_bnry = kcmin_bnry - 1
        
    end function CPLC_kcmin_bnry

    integer(C_INT) function CPLC_icmax_bnry() &
        bind(C, name="CPLC_icmax_bnry")
        use CPL, only: icmax_bnry
        implicit none

        CPLC_icmax_bnry = icmax_bnry - 1
        
    end function CPLC_icmax_bnry

    integer(C_INT) function CPLC_jcmax_bnry() &
        bind(C, name="CPLC_jcmax_bnry")
        use CPL, only: jcmax_bnry
        implicit none

        CPLC_jcmax_bnry = jcmax_bnry - 1
        
    end function CPLC_jcmax_bnry

    integer(C_INT) function CPLC_kcmax_bnry() &
        bind(C, name="CPLC_kcmax_bnry")
        use CPL, only: kcmax_bnry
        implicit none

        CPLC_kcmax_bnry = kcmax_bnry - 1
        
    end function CPLC_kcmax_bnry

    integer(C_INT) function CPLC_timestep_ratio() &
        bind(C, name="CPLC_timestep_ratio")
        use CPL, only: timestep_ratio
        implicit none

        CPLC_timestep_ratio = timestep_ratio
        
    end function CPLC_timestep_ratio

    integer(C_INT) function CPLC_cpl_md_bc_slice() &
        bind(C, name="CPLC_cpl_md_bc_slice")
        use CPL, only: cpl_md_bc_slice
        implicit none

        CPLC_cpl_md_bc_slice = cpl_md_bc_slice

    end function CPLC_cpl_md_bc_slice

    integer(C_INT) function CPLC_cpl_cfd_bc_slice() &
        bind(C, name="CPLC_cpl_cfd_bc_slice")
        use CPL, only: cpl_cfd_bc_slice
        implicit none

        CPLC_cpl_cfd_bc_slice = cpl_cfd_bc_slice

    end function CPLC_cpl_cfd_bc_slice

    integer(C_INT) function CPLC_cpl_cfd_bc_x() &
        bind(C, name="CPLC_cpl_cfd_bc_x")
        use CPL, only: cpl_cfd_bc_x
        implicit none

        CPLC_cpl_cfd_bc_x = cpl_cfd_bc_x 

    end function CPLC_cpl_cfd_bc_x 

    integer(C_INT) function CPLC_cpl_cfd_bc_y() &
        bind(C, name="CPLC_cpl_cfd_bc_y")
        use CPL, only: cpl_cfd_bc_y
        implicit none

        CPLC_cpl_cfd_bc_y = cpl_cfd_bc_y 

    end function CPLC_cpl_cfd_bc_y 

    integer(C_INT) function CPLC_cpl_cfd_bc_z() &
        bind(C, name="CPLC_cpl_cfd_bc_z")
        use CPL, only: cpl_cfd_bc_z
        implicit none

        CPLC_cpl_cfd_bc_z = cpl_cfd_bc_z

    end function CPLC_cpl_cfd_bc_z 

    integer(C_INT) function CPLC_comm_style() &
        bind(C, name="CPLC_comm_style")
        use CPL, only: comm_style
        implicit none

        CPLC_comm_style = comm_style
        
    end function CPLC_comm_style

    integer(C_INT) function CPLC_comm_style_gath_scat() &
        bind(C, name="CPLC_comm_style_gath_scat")
        use CPL, only: comm_style_gath_scat
        implicit none

        CPLC_comm_style_gath_scat = comm_style_gath_scat
        
    end function CPLC_comm_style_gath_scat

    integer(C_INT) function CPLC_comm_style_send_recv() &
        bind(C, name="CPLC_comm_style_send_recv")
        use CPL, only: comm_style_send_recv
        implicit none

        CPLC_comm_style_send_recv = comm_style_send_recv
        
    end function CPLC_comm_style_send_recv


    !Getters: doubles

    real(C_DOUBLE) function CPLC_density_cfd() &
        bind(C, name="CPLC_density_cfd")
        use CPL, only: density_cfd
        implicit none

        CPLC_density_cfd = density_cfd
        
    end function CPLC_density_cfd

    real(C_DOUBLE) function CPLC_dx() &
        bind(C, name="CPLC_dx")
        use CPL, only: dx
        implicit none

        CPLC_dx = dx
        
    end function CPLC_dx

    real(C_DOUBLE) function CPLC_dy() &
        bind(C, name="CPLC_dy")
        use CPL, only: dy
        implicit none

        CPLC_dy = dy
        
    end function CPLC_dy

    real(C_DOUBLE) function CPLC_dz() &
        bind(C, name="CPLC_dz")
        use CPL, only: dz
        implicit none

        CPLC_dz = dz
        
    end function CPLC_dz

    real(C_DOUBLE) function CPLC_xl_md() &
        bind(C, name="CPLC_xl_md")
        use CPL, only: xl_md
        implicit none

        CPLC_xl_md = xl_md
        
    end function CPLC_xl_md

    real(C_DOUBLE) function CPLC_yl_md() &
        bind(C, name="CPLC_yl_md")
        use CPL, only: yl_md
        implicit none

        CPLC_yl_md = yl_md
        
    end function CPLC_yl_md

    real(C_DOUBLE) function CPLC_zl_md() &
        bind(C, name="CPLC_zl_md")
        use CPL, only: zl_md
        implicit none

        CPLC_zl_md = zl_md
        
    end function CPLC_zl_md


    real(C_DOUBLE) function CPLC_xl_cfd() &
        bind(C, name="CPLC_xl_cfd")
        use CPL, only: xl_cfd
        implicit none

        CPLC_xl_cfd = xl_cfd
        
    end function CPLC_xl_cfd

    real(C_DOUBLE) function CPLC_yl_cfd() &
        bind(C, name="CPLC_yl_cfd")
        use CPL, only: yl_cfd
        implicit none

        CPLC_yl_cfd = yl_cfd
        
    end function CPLC_yl_cfd

    real(C_DOUBLE) function CPLC_zl_cfd() &
        bind(C, name="CPLC_zl_cfd")
        use CPL, only: zl_cfd
        implicit none

        CPLC_zl_cfd = zl_cfd
        
    end function CPLC_zl_cfd

    real(C_DOUBLE) function CPLC_x_orig_cfd() &
        bind(C, name="CPLC_x_orig_cfd")
        use CPL, only: x_orig_cfd
        implicit none

        CPLC_x_orig_cfd = x_orig_cfd
        
    end function CPLC_x_orig_cfd

    real(C_DOUBLE) function CPLC_y_orig_cfd() &
        bind(C, name="CPLC_y_orig_cfd")
        use CPL, only: y_orig_cfd
        implicit none

        CPLC_y_orig_cfd = y_orig_cfd
        
    end function CPLC_y_orig_cfd

    real(C_DOUBLE) function CPLC_z_orig_cfd() &
        bind(C, name="CPLC_z_orig_cfd")
        use CPL, only: z_orig_cfd
        implicit none

        CPLC_z_orig_cfd = z_orig_cfd
        
    end function CPLC_z_orig_cfd

    real(C_DOUBLE) function CPLC_x_orig_md() &
        bind(C, name="CPLC_x_orig_md")
        use CPL, only: x_orig_md
        implicit none

        CPLC_x_orig_md = x_orig_md
        
    end function CPLC_x_orig_md

    real(C_DOUBLE) function CPLC_y_orig_md() &
        bind(C, name="CPLC_y_orig_md")
        use CPL, only: y_orig_md
        implicit none

        CPLC_y_orig_md = y_orig_md
        
    end function CPLC_y_orig_md

    real(C_DOUBLE) function CPLC_z_orig_md() &
        bind(C, name="CPLC_z_orig_md")
        use CPL, only: z_orig_md
        implicit none

        CPLC_z_orig_md = z_orig_md
        
    end function CPLC_z_orig_md


    !Getters: pointers
    
    type(C_PTR) function CPLC_xg() &
        bind(C, name="CPLC_xg")
        use CPL, only: xg
        implicit none

        CPLC_xg = C_LOC(xg)
    
    end function CPLC_xg

    type(C_PTR) function CPLC_yg() &
        bind(C, name="CPLC_yg")
        use CPL, only: yg
        implicit none

        CPLC_yg = C_LOC(yg)
    
    end function CPLC_yg

    type(C_PTR) function CPLC_zg() &
        bind(C, name="CPLC_zg")
        use CPL, only: zg
        implicit none

        CPLC_zg = C_LOC(zg)
    
    end function CPLC_zg




end module CPLC
